# orai

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.genesis  Dockerfile.oraivisor  Dockerfile.prod  INTEGRATION.md  Makefile  README.md  UPGRADING.md  api_migration.md  buf.yaml  clean.sh  contract.wasm  deploy-contract.sh  docker-compose.dev.yml  docker-compose.genesis.yml  docker-compose.mainnet.yml  docker-compose.prod.yml  docker-compose.yml  download.wasm  evidence.json  fn.sh  fn_dev.sh  genesis.json  go.mod  go.sum  go.work  go.work.sum  ibc_upgrade.json  init.sh  init_genesis.sh  manifest.json  orai-stack.yml  orai.dev.env  orai.env  oraicli.toml  (+13 more)
.devcontainer/: devcontainer.json  docker-compose.yml
.oraid/: websocket.yaml
app/: ante.go  app.go  app_helpers.go  app_test.go  export.go  genesis.go  simluation.go  test_helpers.go  upgrade_test.go  validate.go  wasmbinding.go
cosmosjs/: .env  dd.js  env_example  index.js  package-lock.json  package.json  routes.js  test.js
cosmwasm-examples/: .gitignore  README.md
doc/: Genesis_validator.md  network.md  proto.md  reset_node.md
docker/: run_oraid.sh  setup_oraid.sh  setup_wasmd.sh
dockersdk/: go.mod  go.sum  main.go
docs/: FULL_NODE.md
e2e-tests-js/: docker-compose.yaml  index.mjs  package.json  simulate.mjs  utils.mjs
interchaintest/: go.mod  go.sum  ibc_transfer_test.go  module_ibchooks_test.go  module_pfm_test.go  (+1 more)
smart-contracts/cv009/: Cargo.toml
smart-contracts/cv009/examples/: schema.rs
smart-contracts/cv009/src/: contract.rs  msg.rs
(+1056 files in other folders)
